@@ -1,2 +1,5 @@
 (defbuiltin getenv (name)
   (sb-ext:posix-getenv name))
+
+(defbuiltin arguments ()
+  *POSIX-ARGV*)
