@@ -1,0 +1,2 @@
+(fn arguments ()
+  (array-list process.argv))
