@@ -1,0 +1,2 @@
+(fn arguments ()
+  (php-array-list *argv*))
